# alphavedha

./: .dockerignore  .env.example  .env.prod.example  .env.vps.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  PROJECT_BRIEF.md  QUICKREF.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  requirements-vps.txt
.claude/: settings.json
.claude/commands/: backtest.md  data-refresh.md  predict.md  train.md  validate.md
.github/: dependabot.yml
.github/workflows/: ci.yml  sim.yml  train.yml
agents/: api-developer.md  data-engineer.md  feature-engineer.md  ml-engineer.md
alembic/: env.py
alembic/versions/: 05c23a1b9653_initial_schema_13_tables.py  6f2d6044726f_d7_new_tables.py  a1b2c3d4e5f6_convert_timescaledb_hypertables.py  a7b8c9d0e1f2_add_shadow_fills_table.py  b8c1d2e3f4a5_add_is_tradeable_to_paper_trades.py  b8c9d0e1f2a3_normalize_actual_return_convention.py  c9d2e3f4a5b6_add_stop_loss_take_profit_to_paper.py  d0e1f2a3b4c5_add_prediction_proofs_table.py  e1f2a3b4c5d6_add_intel_tables.py  f2a3b4c5d6e7_add_strategy_to_paper_trades.py
alphavedha/: __init__.py  config.py  exceptions.py  scheduler.py
alphavedha/api/: CLAUDE.md  __init__.py  app.py  deps.py  schemas.py  sim_artifact.py
alphavedha/backtest/: CLAUDE.md  __init__.py  costs.py  cpcv.py  engine.py  sim_views.py  walk_forward.py
alphavedha/cli/: __init__.py  formatters.py  main.py
configs/: default.yaml  features.yaml  stocks.yaml
deploy/: alphavedha-api.service  alphavedha-scheduler.service  deploy.sh  nginx-vps.conf  nginx.conf  setup.sh  vps-setup.sh
docs/: ADR.md  API_GUIDE.md  BACKEND_REFERENCE.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVOPS_REFERENCE.md  E2E_FLOW.md  FEATURE_CATALOG.md  ML_ARCHITECTURE.md  PROGRESS.md  ROUTINES.md  RUNBOOK.md  SYSTEM_ARCHITECTURE.md  TELEGRAM.md  TRAINING_GUIDE.md  UI_ARCHITECTURE.md  alphavedha-system-architecture.html  edge-factory-plan.md  execution-plan.md  execution-runbook.md  historical_sim_runbook.md  prediction_audit.md  system-diagnosis-2026-07-02.md  training-pipeline.html
notebooks/: event_study.ipynb  train_all_models.ipynb
reports/: morning_briefing_2026-06-25.md  morning_briefing_2026-06-26.md  morning_briefing_2026-06-29.md  weekly-2026-06-14-to-2026-06-21.md  weekly_intelligence_2026-06-27_to_2026-07-04.md  weekly_intelligence_2026-07-04_to_2026-07-11.md  weekly_report_2026-06-27_to_2026-07-04.md  weekly_report_2026-07-04_to_2026-07-11.md
scripts/: backfill_bhavcopy.py  backfill_extraction.py  backup_db.sh  check_fii_sources.py  check_jugaad.py  check_migrations.py  check_nse_data.py  check_nse_live.py  create_tables.py  daily_prediction.py  hetzner_scale.py  ingest_test.py  restore_db.sh  run_bakeoff.py  sim_paper_trading.py  test_fii_dii_fetch.py  validate_3window.py  validate_env.py  verify_phase_a1.py
tests/: CLAUDE.md  conftest.py
(+334 files in other folders)
