[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphavedha"
version = "0.1.0"
description = "AI-powered Indian stock market prediction engine for NSE/BSE"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Saurabh Borkar", email = "borkarsaurabh22@gmail.com" },
]

dependencies = [
    # Data
    "yfinance>=0.2.40",
    "jugaad-data>=0.25",
    "pandas>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "aiohttp>=3.9",

    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "redis>=5.0",

    # ML
    "xgboost>=2.1",
    "torch>=2.3",
    "scikit-learn>=1.5",
    "hmmlearn>=0.3",
    "mapie>=0.9",
    "joblib>=1.4",

    # Feature Engineering
    "ta>=0.11",
    "statsmodels>=0.14",

    # NLP / Sentiment
    "transformers>=4.40",
    "tokenizers>=0.19",

    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # CLI
    "typer[all]>=0.12",

    # Backtesting
    "vectorbt>=0.26",

    # Config & Logging
    "pyyaml>=6.0",
    "structlog>=24.1",

    # Utilities
    "pytz>=2024.1",
    "python-dateutil>=2.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[project.scripts]
alphavedha = "alphavedha.cli.main:app"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["alphavedha", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line length (handled by formatter)
    "B008",    # function call in default arg (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["alphavedha"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "jugaad_data.*",
    "ta.*",
    "hmmlearn.*",
    "mapie.*",
    "vectorbt.*",
    "xgboost.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring database",
    "backtest: marks backtesting validation tests",
]

[tool.coverage.run]
source = ["alphavedha"]
omit = ["alphavedha/cli/*", "tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
